Add social media images and SEO properties

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -2,9 +2,23 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/src/assets/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="/src/assets/favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + Svelte + TS</title>
+    <title>classes.wtf</title>
+    <meta
+      property="og:title"
+      content="The fastest way to search for Harvard classes"
+    />
+    <meta
+      name="description"
+      property="og:description"
+      content="I just want to take a class about [X] but searching the online catalog is so slow, and my results are largely irrelevant. WTF?"
+    />
+    <meta
+      property="og:image"
+      content="https://classes.wtf/assets/social-image.jpg"
+    />
+    <meta name="twitter:card" content="summary_large_image" />
   </head>
   <body>
     <div id="app"></div>
