Add design tweaks and rotated gradient flair

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -12,7 +12,7 @@
     <meta
       name="description"
       property="og:description"
-      content="I just want to take a class about [X] but searching the online catalog is so slow, and my results are largely irrelevant. WTF?"
+      content="“I just want to take a class about [X] but searching the online catalog is so slow, and my results are largely irrelevant. WTF?”"
     />
     <meta
       property="og:image"
